<resources>
    <string name="app_name">Food Diary</string>
    <string name="set_goal">What is your lifestyle goal?</string>
    <string name="totalMealCount">totalMealCount: </string>
    <string name="targetCount">targetCount: </string>

    <string name="endGoal">End this goal</string>
    <string name="confirm_endGoal">Do you wish to end this goal?</string>
    <string name="cancel">Cancel</string>
    <string name="title">Choose Date</string>
    <string name="confirm">Sure</string>
    <string name="year">Y</string>
    <string name="month">M</string>
    <string name="day">D</string>
    <string name="hour">H</string>
    <string name="minute">m</string>

    <string name="select_date">Select date</string>
    <string name="current_date">Current date</string>
    <string name="select_time">Choose time</string>
    <string name="current_time">Current time</string>
  
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>

    <string name="title_activity_notification">Notification</string>


    <!--User Dashboard-->
    <string name="current_goal">Current Goal:   </string>
    <string name="my_progress">How did I progress? </string>
    <string name="my_feeling">How did I feel? </string>
    <string name="intro_to_app">Select "'"add"'" at navigation bar to log a meal entry </string>
    <string name="intro_goal">Select "'"path"'" at navigation bar to add a new goal then</string>
    <string name="joy"> &#128513; </string>
    <string name="happy">&#128522; </string>
    <string name="pensive">&#128542; </string>
    <string name="cry">&#128557; </string>

    <!-- Navigation Bar -->
    <string name="text_label_1">Meals</string>
    <string name="text_label_2">Path </string>
    <string name="text_label_3">Add </string>
    <string name="text_label_4">Friends </string>
    <string name="text_label_5">Settings </string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Setting Page -->
    <string name="editProfile">My Profile</string>
    <string name="notification">Enable Notification</string>
    <string name="logout">Logout</string>

    <!-- Notification Page -->
    <string name="settings">Settings</string>
    <string name="setTime">Set Time</string>
    <string name="send_reminder">Send reminder</string>

    <!-- IP Address -->
    <string name="IP">http://3.1.222.99:9999</string>
    <!--<string name="IP">http://192.168.1.176:8080</string>-->
</resources>