<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/textViews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/currentGoal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_goal"
            android:textStyle="bold"
            android:textSize="18dp"
            android:padding="5dp"/>


        <TextView
            android:id="@+id/viewCurrentGoal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="18dp"
            android:padding="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/chartLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/myProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_progress"
            android:textStyle="bold"
            android:textSize="18dp"
            android:padding="5dp"/>

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pieChart"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/myFeeling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_feeling"
            android:textStyle="bold"
            android:textSize="18dp"
            android:padding="5dp"/>

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pieChart2"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/introGoal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intro_goal"
            android:padding="20dp"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intro_to_app"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:visibility="invisible"/>


        <!--view needed to ensure navigation bar stays at bottom for linear layout-->
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white"/>



        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/bottom_navigation_menu"
            app:labelVisibilityMode="labeled"/>

    </LinearLayout>





</LinearLayout>